<resources>
    <string name="app_name">WeatherApp</string>
    <string name="day_temperature">day:</string>
    <string name="min_temperature">min:</string>
    <string name="max_temperature">max:</string>
    <string name="day_of_week_date">%s, %s</string>
    <string name="week_weather">Week weather</string>
    <string name="day_weather">Day weather</string>
    <string name="temperature_value">%,.2f %s</string>
    <string name="pressure_value">%,.0f hPa</string>
    <string name="speed_value">%,.0f m/s</string>
    <string name="temp_min">Temp. min.</string>
    <string name="temp_max">Temp. max.</string>
    <string name="pressure">Pressure</string>
    <string name="wind_speed">Wind speed</string>
    <string name="no_internet_connection">Offline mode</string>
</resources>